--- a/src/App.css
+++ b/src/App.css
@@ -7,12 +7,17 @@
  
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  --primary-color: #17a2b8;
+   --primary-color: #17a2b8;
   --dark-color: #343a40;
   --light-color: #f4f4f4;
   --danger-color: #dc3545;
-  --success-color: #28a745;
+  --success-color: #28a745; 
 }
+/* @media print {
+  html, body {
+     display: none; 
+  }
+} */
 
 /* body {
   font-family: 'Raleway', sans-serif;
@@ -25,15 +30,15 @@ h1{
   margin-top: 20px;
   
 }
-.heading{
+.heading-container{
   height: 80px;
-  width: 400px;
+  width: 850px;
   background-color: azure;
   border: 0px solid red;
   border-radius: 20px;
   padding: 2px;
   margin-top: 20px;
-  box-shadow: 5px 10px;
+  /* box-shadow: 5px 10px; */
   margin-bottom: 10px;
 }
 #theme{
