--- a/src/App.css
+++ b/src/App.css
@@ -25,6 +25,11 @@
   line-height: 1.6;
  
 } */
+.social-icons{
+  margin-left: 20px;
+  margin-right: 20px;
+  
+}
 h1{
   text-align: center;
   margin-top: 20px;
