--- a/src/App.css
+++ b/src/App.css
@@ -142,8 +142,8 @@ button {
 
 /*  Posts*/
 .post {
-  width: 385px;
-  margin: 0px 25px 40px 25px;
+  width: 300px;
+  margin: 0px 30px 40px 25px;
   border: 2px solid azure;
 }
 
@@ -196,7 +196,7 @@ button {
 }
 
 .posts {
-  flex: 9;
+  flex: 12;
   display: flex;
   flex-wrap: wrap;
   margin: 20px;
@@ -236,6 +236,7 @@ button {
 .headerImg {
   width: 100%;
   height: 450px;
-  margin-top: 80px;
+  margin-top: 10px;
   object-fit: cover;
+  margin-bottom: 20px;
 }
