--- a/src/App.css
+++ b/src/App.css
@@ -144,14 +144,15 @@ button {
 .post {
   width: 300px;
   margin: 0px 30px 40px 25px;
-  border: 2px solid azure;
+  padding: 0px;
+  
+
 }
 
 .postImg {
   width: 100%;
   height: 280px;
   object-fit: cover;
-  border-radius: 7px;
 }
 
 .postInfo {
@@ -172,27 +173,25 @@ button {
 .postTitle {
   font-size: 24px;
   font-weight: 700;
-  margin-top: 15px;
   cursor: pointer;
 }
 
 .postDate {
   font-style: italic;
   font-size: 20px;
-  color: #999;
-  margin-top: 15px;
+  color: aqua;
 }
 
 .postDesc {
+  font-style: italic;
   font-size: 20px;
   color: #444;
   line-height: 24px;
-  margin-top: 15px;
   overflow: hidden;
   text-overflow: ellipsis;
-  display: -webkit-box;
-  -webkit-line-clamp: 4;
-  -webkit-box-orient: vertical;
+  margin-top: 0px;
+  text-align: center;
+  
 }
 
 .posts {
